tests/machine/x/go/cross_join_triple.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/cross_join_triple.go:16:15: undefined: Combos
tests/machine/x/go/cross_join_triple.go:17:16: undefined: Combos
tests/machine/x/go/cross_join_triple.go:21:32: undefined: Combos
